--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,47 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-size: 10px;
+}
+
+
 /*
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
 
+.screenshot {
+
+  /* display: block; */
+  height: 100%;
+  /* background-image: url("../images/Screenshot\ 2019-08-19\ at\ 22.56.51.png"); */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* object-fit: cover; */
+}
+
+.log-in {
+  display: inline;
+
+}
+
+.phones {}
+
 body {
+
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: #1c5380;
+}
+
+p {
+  text-align: center;
+  font-size: 14px;
+
 }
