--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,48 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: #06365f;
+}
+.phones-left{
+  float: left;
+  margin-left: -10%;
+
+}
+.right-block{
+  width: 36%;
+  display: inline-block;
+  margin-block-end: 6%;
+  margin-left: 13%
+}
+.father{
+  margin: 17% 20%;
+  width: 100%;
+  
+}
+nav {
+  display: flex;
+}
+.btn-log{
+  background-color:#1c5380;
+  height: 2%;
+  margin-left: 11%;
+  margin-top: 5%;
+}
+header {
+  /*background-image: url("../images/frame.png")*/
+  background-color: white;
+}
+header h1{
+  
+  padding: 2% 0 0% 6%;
+  color:#1c5380;
+}
+header p {
+  padding: 3%;
+}
+header span{
+  font-weight: bold;
+}
+.bottom{
+  padding-left: 7%;
 }
