--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,109 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  box-sizing: border-box;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("./../images/bgtile.png");
+  background-repeat: repeat-x;
 }
+
+
+.phone-image {
+  float: left;
+  margin: 100px 50px 100px 200px;
+}
+
+.info-box {
+  float: left;
+  margin: 100px 200px 100px 50px;
+  
+}
+
+.logo {
+  float: left;
+  height: 60px;
+}
+
+.login {
+  float: right;
+  background-color: #1c5380;
+  color: white;
+  border-radius: 5px;
+  font-weight: bold;
+  height: 40px; 
+  width: 120px;
+  text-align: center;
+  padding: 5px 0;
+  
+}
+
+.login img {
+  display: inline-block;
+  vertical-align: middle;
+  padding: 5px;
+}
+
+.login h2 {
+  display: inline-block;
+  padding: 5px;
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+}
+
+.text-box {
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  float: left;
+  width: 500px;
+  border-radius: 5px;
+  padding: 30px;
+}
+
+h1 {
+  color: #1c5380;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.text-box ul li {
+  margin-top: 5px;
+}
+
+.bottom-tab {
+  float: left;
+  margin-left: 75px;
+}
+
+.bottom-tab img {
+  margin: 0 10px;
+}
+
+nav {
+  clear: both;
+  text-align: center;
+}
+
+nav ul {
+  margin: 15px 0;
+}
+
+nav ul li {
+  display: inline;
+  color: #1c5380;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin: 0 15px;  
+}
+
+.copyright {
+  color: grey;
+}
+
+
+
+
