--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,16 +8,17 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif; 
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+
 }
-.color-band-bkg {
-  background-color: rgb(53, 105, 141);
-  height: 300px;
-}
+
+
  .main-box {
   margin: 0 auto;
   width: 1000px;
   height:520px;
-  margin-top: 100px;
+  margin-top: 50px;
   padding: 100px 50px;
   display: flex;
   flex-direction: row;
@@ -38,57 +39,57 @@ body {
  .frame {
   display: flex;
   flex-direction: column;
-  
-  padding: 20px;
+  justify-content: flex-start;
+  margin-left: 50px;
+  width:500px;
  }
  header {
    display: flex;
    flex-direction: row;
    align-items: center;
-   justify-content: space-around;
+   justify-content: space-between;
+   padding: 0 5px;
 
  }
  header a {
-  background-color: #1c5380;
+  background: linear-gradient( #06365f, #1c5380);
   color: white;
-  text-decoration: none;
   width: 80px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 12px;
   padding: 10px;
   border-radius: 5px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   margin-left: 10px;
  }
  .text-box {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     background-image: url("../images/frame.png");
-    background-position: center;
-    background-size: cover;
     background-repeat: no-repeat;
-    width: 505px;
     
+    padding: 10px 20px 0px 20px;
     
  }
  .text-box p {
-   padding: 50px;
+  
  }
  .app-stores {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  padding-right: 20px;
+
  }
 
  footer {
    display: flex;
-   flex-direction: row;
    justify-content: center;
+   font-weight: bold;
+   align-items: center;
  }
  footer ul {
   display: flex;
-  flex-direction: row;
   list-style-type: none;
  }
  footer li {
