--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,54 +1,153 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+* {
+  margin: 0;
+  padding: 0;
+}
+
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  background-image: "../images/bgtile.png";
+
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+a {
+  color: #1c5380;
+  text-decoration: none;
+}
+
+img {
+  width: 100%;
+}
+
+
+.imgPhone {
+  width: 350px;
+}
+
+.imgBrand {
+  width: 300px;
+}
+
+.imgHome {
+  width: 25px;
+}
+
+.imgIphone {
+  width: 150px;
+}
+
+.imgAnd {
+  width: 140px;
+}
+
+main {
+  width: 100%;
+  height: 100vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+
+
+
+}
+
+#index {
+  width: 70vw;
+  height: 70vh;
+
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+}
+
+
+.content {
+  width: 35vw;
+  height: 60vh;
+
+
+}
+
+.logo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+button {
+  width: 100px;
+  height: 45px;
+
+  border-radius: 6px;
+  border: 0px;
+  background-color: #1c5380;
+  color: white;
+
+  font-size: 1rem;
+
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+
+}
+
+.frame {
+  width: 38vw;
+  height: 40vh;
+
+  background-image: url(../images/frame.png);
+  background-size: 100%;
   background-repeat: no-repeat;
-  background-size: 100% 350px;
-  
+  background-position: top;
+
+  display: flex;
+  justify-content: center;
+  align-content: center;
+
+
 }
 
-section {
-  width: 35%;
-  padding-right: 26%;
+.text>h1 {
+  font-size: 1.7rem;
+  line-height: 30px;
+  color: #06365f;
+}
+
+.text {
+  width: 85%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 
 }
 
-#description {
 
-  background-image: "../images/frame.png";
-  background-repeat: no-repeat;
-  padding: 17px 20px;
-}
 
-#logos {
-  padding: 0 20px;
-}
-#logos > img {
-  margin: 0 10px;
+
+.app {
+  width: 70%;
+  height: 8vh;
+
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
 }
 
 footer {
-  clear: both;
-  text-align: center;
-  
-}
-ul {
-padding-top: 2%;
-}
-li {
-  display: inline;
-  text-transform: uppercase;
-  color: #1c5380;
-  font-weight: bold;
-  margin:0 10px;  
-}
+  width: 40vw;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 0.8rem;
 
-.copyright {
-  color: grey;
-}
+} 
