--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,81 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 14px/1.5 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  background-image: url('../images/bgtile.png');
+  background-repeat: repeat-x;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding: 60px;
+}
+
+button {
+  background: #678cac;
+  height: 45px;
+  border-radius: 3px;
+}
+button > img {
+  vertical-align: middle;
+}
+
+.flexbox-insta {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.flexbox-insta > img {
+  width: 250px;
+}
+span {
+  color: #d8e2ea;
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+#section2 {
+  background-image: url(../images/frame.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-flow: column;
+  align-items: flex-start;
+  padding: 0 1.5rem;
+}
+h3 {
+  color: #51789b;
+  font-weight: bold;
+}
+
+.logos {
+  padding: 0 1.5rem;
+}
+ul {
+  text-transform: uppercase;
+  list-style: none;
+  -ms-box-orient: horizontal;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
+  margin: 0 0.75rem;
+}
+
+li {
+  padding: 5px;
+  width: 100px;
+  height: 100px;
+  margin: 5px;
+  color: #51789b;
+  font-weight: bold;
+}
+
+ul li:last-child {
+  color: #c1c1c2;
+  font-weight: bold;
 }
