--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -10,6 +10,11 @@ body {
   position: relative;
 }
 
+header {
+  background-color: #1c5380;
+  height: 275px;
+}
+
 #top {
   background-color: #1c5380;
   height: 275px;
