--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,99 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(180deg,#06365f 32%, white 32%);
+  background-repeat: no-repeat;
+}
+
+section {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 90px 100px 20px 100px;
+}
+
+#titulo-login {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+button {
+  display: flex;
+  align-items: center;
+  padding: 5px;
+  border-radius: 5%;
+  width: 90px;
+  justify-content: space-around;
+  color: white;
+  border: 0.5px solid rgba(0, 0, 0, 0.3);
+  background: linear-gradient(#1c5380 20%, #06365f 80%);
+}
+
+.whitebox {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding: 30px;
+  border-radius: 2%;
+}
+
+h1 {
+  line-height: 28px;
+  padding-bottom: 30px;
+  letter-spacing: 1px;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style-type: none;
+  padding: 10px;
+  text-transform: uppercase;
+  font-size: 10px;
+  font-weight: 600;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+#lightgrey {
+  color: #A1A1A2;
+}
+
+#container {
+  box-sizing: content-box;
+}
+
+.phones > img {
+  box-sizing: content-box;
+}
+
+p {
+  padding-bottom: 10px;
+}
+
+.whitebox img {
+  height: 40px;
+  padding-right: 10px;
+  padding-top: 80px;
+  box-sizing: content-box;
 }
