--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,83 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  /* background-repeat: no-repeat; */
+  background-repeat: repeat-x;
+  margin-top: 130px;
+}
+
+.total {
+  display: flex;
+  flex-direction: column;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.instagram {
+  padding-left: 60px;
+}
+
+
+.log-in {
+  border: .5px solid #06365f;
+  background-image: url(../images/home.png);
+  background-repeat: no-repeat;
+  background-position: center left;
+  padding: 10px 10px 10px 30px;
+  color: white;
+  text-decoration: none;
+  box-shadow: 0 10px 6px -6px #06365f;
+  border-radius: 5px;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.frame {
+  margin-top: 30px;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  padding: 10px 40px;
+  background-size: contain;
+}
+
+h1 {
+  color: #1c5380;
+  font-size: 25px;
+}
+
+p {
+  font-size: 14px;
+}
+
+.mkt {
+padding-left: 40px;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  color: #1c5380;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.footer li {
+  margin-top: 30px;
+  display: inline-block;
+  padding-left: 16px;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: bolder;
+}
+
+.ano {
+  color: gray;
 }
