--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,122 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+
 }
+
+.main-frame{
+display: flex;
+flex-direction: row-reverse;
+margin: 7% 15% 5%;
+justify-content: space-around;
+}
+
+.homes {
+  background-color: rgb(104, 142, 173);
+  border: 1px solid rgba(2, 2, 80, 0.541);
+  box-shadow: 0 0 2px rgba(2, 2, 80, 0.541);
+  width: 120px;
+  color: ghostwhite;
+  font-weight: 900;
+  display:flex;
+  align-items: center;
+  padding: 25px 15px;;
+  justify-content: space-evenly;
+  height: 35px;
+}
+
+.cabecalho{
+  display: flex;
+align-items: center;
+justify-content: space-between;
+margin-bottom: 5%;
+
+}
+
+.principal{
+  width: 50%;
+}
+
+.informacoes h1{
+  color: #06365f;
+  font-weight: 900;
+  width: 100%;
+  padding-left:45px;
+  padding-top: 40px;
+  padding-bottom: 40px; 
+}
+
+.informacoes p{
+    margin-bottom: 5%;
+    padding-left: 45px;
+    padding-right: 50px; 
+    font-size: 18px;
+  }
+
+  .informacoes{
+    background-image: url("../images/frame.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 100%;
+    padding-left:0; 
+  }
+
+  .btn{
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  .btn img{
+    padding-left: 40px;
+    padding-top: 3%;
+  }
+
+  .imagem-celular > img{
+    height: 100%;
+  }
+
+  .rodape ul li a{
+    text-decoration: none;
+    font-style: none;
+    text-transform: uppercase;
+    width: 100%;
+    padding: 10px;
+    color: #06365f;
+    font-weight: 900;
+  }
+  .rodape ul >li{
+    font-style: none;
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .rodape ul{
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .rodape{
+    display: flex;
+    align-items: center;
+  }
+
+  #insta{
+    color:grey;
+    padding-left: 10px;
+  }
