--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,51 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+* {
+  padding: 0px;
+  margin: 0px;
+}
+#empty {
+height: 40%;
+background-image:linear-gradient(to bottom, #577EA0, #305A80);
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+section {
+  display: flex;
+
+}
+#blc1 {
+  padding: 10px;
+}
+body section div a {
+  text-decoration:none;
+  color: black;
+  font-weight: bold;
+
+}
+
+footer a {
+  text-decoration:none;
+  color:#06365f;
+  font-weight: bold;
+}
+
+h1 {
+  color: #06365f;
+}
+
+footer nav ul li {
+flex-direction: row;
+float: right;
+text-align: center;
+list-style-type: none;
+justify-content: space-around;
+
 }
