--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,316 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+* {
   margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  box-sizing: border-box;
 }
+
+/*.first {
+  background-image: url(../images/bgtile.png);
+  display: flex;
+  height: 300px;
+}*/
+
+.all {
+  display: flex;
+  justify-content: center;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  padding-top: 100px;
+}
+
+.btn-and-logo {
+  display: flex;
+  
+}
+
+#logo-insta {
+  width: 227px;
+}
+#btn-home {
+  
+}
+h2 {
+  font-size: 25px;
+  margin-bottom: 22px;
+  color: #487093;
+}
+
+.btn-and-logo button {
+  width: 18%;
+  height: 10%;
+  margin-left: 139px;
+  padding: 2px 5px 5px 5px;
+  background-color: #487093;
+  margin-top: 9px;
+  color: white;
+}
+
+.content p {
+  margin-bottom: 20px;
+}
+
+.container {
+  background-image: url(../images/frame.png);
+  width: 498px;
+  padding: 35px;
+  background-repeat: round;
+}
+
+.logo-and {
+  margin-left: 50px;
+}
+
+.navbar nav {
+  width: 570px;
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: #003569;
+  font-size: 12px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.navbar p {
+  font-size: 12px;
+  font-weight: bold;
+  color: #999;
+  display: inline-block;
+}
+
+.phones {
+  display: flex;
+  margin-right: 10px;
+}
+
+#and-insta {
+  margin-left: 20px;
+}
+
+button {
+    border:1px solid #1a4d61;
+     text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
+     font-weight:bold; color: #a7cfdf;
+     background-color: #a7cfdf; 
+     background-image: -webkit-gradient(linear, left top, left bottom, from(#a7cfdf), to(#23538a));
+     background-image: linear-gradient(to bottom, #4a8197, #23538a);
+    }
+
+    #img-home {
+
+    }
+
+/*
+.all {
+  display: flex;
+  justify-content: center;
+  margin: 50px;
+}
+
+
+.phone {
+  margin-top: 100px;
+}
+
+.btn-and-logo {
+  width: 350px;
+  height: 660px;
+  background-color: white;
+  margin-left: 5px;
+  border: 1px solid #e6e6e6;
+}
+
+.btn-and-logo img {
+  width: 55%;
+  height: 10%;
+  margin-left: 80px;
+  margin-top: 35px;
+}
+
+.signup {
+  text-align: center;
+  background-color: white;
+  font-size: 17px;
+  font-weight: bold;
+  padding-left: 50px;
+  padding-right: 50px;
+  color: #999;
+}
+
+.fb {
+  background-color: white;
+}
+
+.fb button {
+  display: block;
+  margin: 0 auto;
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+  width: 280px;
+  height: 33px;
+  border-radius: 5px 5px 5px 5px;
+  background-color: #3897f0;
+  border: 1px solid white;
+}
+
+.or {
+  text-align: center;
+  font-weight: bold;
+  color: #999;
+  font-size: 14px;
+  background-color: white;
+}
+
+.form1 {
+  text-align: center;
+  background-color: white;
+}
+
+input {
+  height: 32.5px;
+  width: 275px;
+  border: 1px solid #efefef;
+  margin-top: 7px;
+  font-size: 12px;
+}
+
+.Next button {
+  display: block;
+  margin: 0 auto;
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+  width: 280px;
+  height: 33px;
+  border-radius: 5px 5px 5px 5px;
+  background-color: #3897f0;
+  border: 1px solid white;
+}
+
+.Next {
+  background-color: white;
+}
+
+.bottomP {
+  text-align: center;
+  background-color: white;
+  font-size: 15px;
+  padding-left: 60px;
+  padding-right: 60px;
+  color: #999;
+}
+
+.bottomP b {
+  background-color: white;
+}
+
+.bottom {
+  width: 350px;
+  height: 80px;
+  background-color: white;
+  margin-left: 5px;
+  border: 1px solid #e6e6e6;
+  width: 100%
+}
+
+.leftandright {
+  width: 350px;
+}
+
+.bottom a {
+  text-decoration: none;
+  background-color: white;
+}
+
+.bottom p {
+  text-align: center;
+  font-size: 14px;
+  background-color: white;
+}
+
+.after {
+  text-align: center;
+  padding-top: 5px;
+  font-size: 14px;
+}
+
+.lastimg img {
+  width: 35%;
+  height: 35%;
+  margin: 0 auto;
+}
+
+.lastimg {
+
+  display: flex;
+  flex-direction: row;
+  height: 110px;
+}
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin-left: 70px;
+  padding-right: 100px;
+}
+
+.navbar nav {
+  width: 1100px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: #003569;
+  font-size: 12px;
+  font-weight: bold;
+  margin-left: 20px;
+  position: static;
+}
+
+.navbar p {
+  font-size: 12px;
+  font-weight: bold;
+  color: #999;
+  display: inline-block;
+}
+
+@media (max-width: 870px) {
+  .phone {
+    display: none;
+  }
+
+  .navbar {
+    width: 352px;
+    margin: auto;
+  }
+
+  .navbar nav {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+  .abc {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+  }
+
+  .lastimg {
+    height: 100px;
+  }
+
+}
+*/
