--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -15,6 +15,7 @@ body {
 	background-image: linear-gradient(to bottom, #3F688C 0%,#3F688C 40%,#F4F5F7 40%,#F4F5F7 100%);
 	justify-content: center;
 	align-items: center;
+	flex-wrap: wrap;
 }
 
 
@@ -83,11 +84,37 @@ body {
 	display: flex;
 	justify-content: flex-start;
 	padding-left: 40px;
-	padding-top: 10px;
+	padding-top: 1	0px;
 
 }
 
+#nav-footer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 2vw;
+	background-color: #F4F5F7;
+	margin-top: -130px;
+}
 
+#nav-footer li {
+	list-style: none;
+	margin-left: 20px;
+	margin-right: 20px; 
+	font-size: 12px;
+	color: #06365f;
+	font-weight: 900;
+}
+
+#nav-footer ul {
+	display: flex;
+	justify-content: space-around; 
+}
+
+#nav-footer p {
+	font-size: 12px;
+}
 
 
 
