--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,109 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+#backBlue{
+  background-color: #1c5380;
+ 
+  height: 250px;
+}
+
+#panel{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* top: 85px;
+  left: 130px; */
+  margin-top: 60px;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+        transform: translate(-50%, -50%);
+  width: 1000px;
+}
+
+#block{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+
+nav{
+	width: 600px;
+}
+
+nav ul{
+	list-style: none;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+nav a {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #1c5380;
+}
+
+footer{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+#phone > img{
+  height: 90%;
+}
+
+#head{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#head > div + button{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;  
+  background-color: #1c5380;
+  border-color: #06365f;
+  width: 80px;
+  color: #fff;
+
+}
+
+/*
+Colors to use:
+dark blue: #06365f
+light blue: #1c5380
+*/
+
+#sec{
+  /* border: 1px solid black; */
+}
+
+#quadro{
+  /* border: 1px solid black; */
+  width: 500px;
+  padding: 0px 30px;
+}
+
+#bloco{
+  position: absolute;
+  top: 90px;
+  left: 440px;
+}
+
+h2{
+  width: 250px;
+  color: #06365f;
+}
+
+#article{
+  width: 430px;
+  
+}
